Add view ubications

--- a/app/event.haml
+++ b/app/event.haml
@@ -44,9 +44,11 @@
       .container
         .main-why__content
           .main-why__item
-          .main-why__item
+          .main-why__item.main-why__item--event
             .main-general__title.main-general__title--event
               %h2 ¡poke para tus eventos!
+              %p.format.format--white Déjanos tus datos, te llamaremos.
+            %hr.line-gray.line--white
             %form
               %label.label--white Datos personales
               .form-group
