--- a/app/scss/_work.scss
+++ b/app/scss/_work.scss
@@ -55,6 +55,11 @@ label {
   text-transform: capitalize;
   letter-spacing: 0;
   font-family: $Raleway;
+
+  &.format--white {
+    color: $white;
+    text-transform: none;
+  }
 }
 
 .custom-control-label {
