--- a/app/environmental.haml
+++ b/app/environmental.haml
@@ -15,24 +15,24 @@
         .container
           .main-brand
             %a.navbar-brand{:href => "index.html"}
-              %img#iso{:src => "assets/img/Home/Logo poke.svg"}/
+              %img#iso{:src => "assets/img/Create_Poke/Logo poke.svg"}/
             %button.navbar-toggler.p-2.border-0.hamburger.hamburger--elastic.ml-autos{"data-toggle" => "offcanvas", :type => "button"}
               %span.hamburger-box
                 %span.hamburger-inner
           .navbar-collapse.offcanvas-collapse
             %ul.navbar-nav.mr-autos
               %li.nav-item.active
-                %a.nav-link.active{:href => "entries.html"} Menu
+                %a.nav-link{:href => "entries.html"} Menu
               %li.nav-item
                 %a.nav-link{:href => "about.html"} Nosotros
               %li.nav-item
-                %a.nav-link{:href => "#"} Ubicaciones
+                %a.nav-link{:href => "ubications.html"} Ubicaciones
               %li.nav-item
                 %a.nav-link{:href => "poke-dots.html"} Poke puntos
               %li.nav-item
-                %a.nav-link{:href => "environmental.html"} Ambiental
+                %a.nav-link.active{:href => "environmental.html"} Ambiental
               %li.nav-item
-                %a.nav-link{:href => "#"} Eventos
+                %a.nav-link{:href => "event.html"} Eventos
               %li.nav-item
                 .main-nav__btn
                   .btn__buy
