--- a/app/poke-bowls.haml
+++ b/app/poke-bowls.haml
@@ -15,7 +15,7 @@
         .container
           .main-brand
             %a.navbar-brand{:href => "index.html"}
-              %img#iso{:src => "assets/img/Home/Logo poke.svg"}/
+              %img#iso{:src => "assets/img/Create_Poke/Logo poke.svg"}/
             %button.navbar-toggler.p-2.border-0.hamburger.hamburger--elastic.ml-autos{"data-toggle" => "offcanvas", :type => "button"}
               %span.hamburger-box
                 %span.hamburger-inner
@@ -26,13 +26,13 @@
               %li.nav-item
                 %a.nav-link{:href => "about.html"} Nosotros
               %li.nav-item
-                %a.nav-link{:href => "#"} Ubicaciones
+                %a.nav-link{:href => "ubications.html"} Ubicaciones
               %li.nav-item
                 %a.nav-link{:href => "poke-dots.html"} Poke puntos
               %li.nav-item
                 %a.nav-link{:href => "environmental.html"} Ambiental
               %li.nav-item
-                %a.nav-link{:href => "#"} Eventos
+                %a.nav-link{:href => "event.html"} Eventos
               %li.nav-item
                 .main-nav__btn
                   .btn__buy
@@ -50,13 +50,13 @@
         .main-entries__nav
           %ul#pills-tab.nav.nav-pills.mb-3{:role => "tablist"}
             %li.nav-item.nav-item--tabs
-              %a#pills-home-tab.nav-link--tabs{ :href => "entries.html"} entradas
+              %a#pills-home-tab.nav-link--tabs{ :href => "createpokebolw.html"} entradas
             %li.nav-item.nav-item--tabs
               %a#pills-profile-tab.nav-link--tabs.active{:href => "poke-bowls.html"} poke bowls
             %li.nav-item.nav-item--tabs
               %a#pills-contact-tab.nav-link--tabs{:href => "juice-bar.html"} juice bar
           .btn__tabs
-            %a.btn-btn_custom.btn--large.btn--filled.btn--filled-gray{:href => ""} 
+            %a.btn-btn_custom.btn--large.btn--filled.btn--filled-gray{:href => "createpokebolw.html"} 
               %img{ :src => "assets/img/Home/R Rappi.svg"}/
               %span.line
               ARMA TU BOWL
