--- a/app/poke-dots.haml
+++ b/app/poke-dots.haml
@@ -15,24 +15,24 @@
         .container
           .main-brand
             %a.navbar-brand{:href => "index.html"}
-              %img#iso{:src => "assets/img/Home/Logo poke.svg"}/
+              %img#iso{:src => "assets/img/Create_Poke/Logo poke.svg"}/
             %button.navbar-toggler.p-2.border-0.hamburger.hamburger--elastic.ml-autos{"data-toggle" => "offcanvas", :type => "button"}
               %span.hamburger-box
                 %span.hamburger-inner
           .navbar-collapse.offcanvas-collapse
             %ul.navbar-nav.mr-autos
               %li.nav-item.active
-                %a.nav-link.active{:href => "entries.html"} Menu
+                %a.nav-link{:href => "createpokebolw.html"} Menu
               %li.nav-item
                 %a.nav-link{:href => "about.html"} Nosotros
               %li.nav-item
-                %a.nav-link{:href => "#"} Ubicaciones
+                %a.nav-link{:href => "ubications.html"} Ubicaciones
               %li.nav-item
-                %a.nav-link{:href => "poke-dots.html"} Poke puntos
+                %a.nav-link.active{:href => "poke-dots.html"} Poke puntos
               %li.nav-item
                 %a.nav-link{:href => "environmental.html"} Ambiental
               %li.nav-item
-                %a.nav-link{:href => "#"} Eventos
+                %a.nav-link{:href => "event.html"} Eventos
               %li.nav-item
                 .main-nav__btn
                   .btn__buy
@@ -40,22 +40,23 @@
                       %img{ :src => "assets/img/Home/R Rappi.svg"}/
                       %span.line
                       Pide en línea
-    .about-banner{style:"background-image: url('assets/img/Poke_puntos/Fondo Poke Puntos.png');"}
+    .about-banner.about-banner--full{style:"background-image: url('assets/img/Poke_puntos/Fondo Poke Puntos.png');"}
       .overlay
-      .about-banner__text
-        .about-banner__title
-          %h3 Con 6 visitas
-          %span puedes reclamar un
-          %h3 Poke Mediano
-        .btn-box.btn-box--resgister
-          %a.btn_custom.btn--large.btn--filled{ :href=>"#contact"}
-            regístrate aquí
-        .about-banner__boximg
-          .about-banner__imgs
-            .about-banner__img--one
-              %img{ :src => "assets/img/Poke_puntos/Logo poke puntos.png"}/
-            .about-banner__img--two
-              %img{ :src => "assets/img/Poke_puntos/Logo leal.png"}/
+      .container
+        .about-banner__text.mt-4
+          .about-banner__title
+            %h3 Con 6 visitas
+            %span puedes reclamar un
+            %h3 Poke Mediano
+          .btn-box.btn-box--resgister
+            %a.btn_custom.btn--large.btn--filled{ :href=>"#contact"}
+              regístrate aquí
+          .about-banner__boximg
+            .about-banner__imgs
+              .about-banner__img--one
+                %img{ :src => "assets/img/Poke_puntos/Logo poke puntos.png"}/
+              .about-banner__img--two
+                %img{ :src => "assets/img/Poke_puntos/Logo leal.png"}/
     .main-pokedots
       .container
         .main-pokedots__box
