--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -31,7 +31,7 @@
 }
 
 .btn--medium {
-  padding: 10px 14px;
+  padding: 10px 8px;
   min-width: 85px;
   font-size: 17px;
 }
@@ -110,6 +110,20 @@ button {
     -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
     box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
     transition: 0.3s ease-in-out;
+  }
+
+  &.active {
+    background: transparent;
+    border: 2px solid #686868;
+    color: #686868;
+
+    .line {
+      border-right: 1px solid #686868;
+    }
+
+    img {
+      filter: brightness(0.4);
+    }
   }
 }
 
