--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -398,7 +398,7 @@ body {
 }
 
 .btn--medium {
-  padding: 10px 14px;
+  padding: 10px 8px;
   min-width: 85px;
   font-size: 17px;
 }
@@ -482,6 +482,20 @@ button {
   transition: 0.3s ease-in-out;
 }
 
+.btn--filled-gray.active {
+  background: transparent;
+  border: 2px solid #686868;
+  color: #686868;
+}
+
+.btn--filled-gray.active .line {
+  border-right: 1px solid #686868;
+}
+
+.btn--filled-gray.active img {
+  filter: brightness(0.4);
+}
+
 .btn-box {
   padding: 30px 0;
 }
@@ -552,10 +566,14 @@ button {
 
 .about-banner {
   background-size: cover;
-  height: 100vh;
+  height: 60vh;
   position: relative;
   display: flex;
   align-items: center;
+}
+
+.about-banner.about-banner--full {
+  height: 100vh;
 }
 
 .about-banner .container {
@@ -1549,6 +1567,113 @@ textarea::placeholder {
   padding: 0;
 }
 
+.main-creategeneral__content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.main-creategeneral__item--grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.main-creategeneral__box {
+  width: 100%;
+  height: 550px;
+  background: #E9AAB2;
+}
+
+.main-creategeneral__subitem:hover {
+  text-decoration: none;
+}
+
+.main-creategeneral__img {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.main-creategeneral__img img {
+  width: 100%;
+  height: 60%;
+  object-fit: contain;
+}
+
+.main-createpoke__header {
+  background-color: #686868;
+  text-align: center;
+  padding: 5px;
+  display: grid;
+  grid-template-columns: 90% 10%;
+}
+
+.main-createpoke__text p {
+  margin-bottom: 0;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.main-createpoke__boxbody {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 30px 0;
+  background-color: #fff;
+}
+
+.main-createpoke__bodytext {
+  margin-top: -30px;
+}
+
+.main-createpoke__bodytext p {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.main-createpoke__img {
+  width: 100%;
+  height: 100%;
+}
+
+.main-createpoke__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.main-create-details {
+  display: flex;
+  align-items: baseline;
+  margin-right: 5px;
+}
+
+.main-create-details span {
+  margin-right: 5px;
+  padding: 5px 20px;
+  border-radius: 50px 50px;
+  background: #B4B4B4;
+}
+
+.main-create-details p {
+  color: #686868;
+  font-family: "Raleway", sans-serif;
+  font-style: italic;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.main-create-boxdetails {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 30px;
+}
+
 .modal-dialog {
   max-width: 1000px;
 }
@@ -1897,8 +2022,17 @@ button:focus {
   justify-content: center;
 }
 
+.navbar.fixed-bc {
+  height: 85px;
+  background-color: #fff;
+  transition: 0.3s ease-in-out;
+  justify-content: center;
+}
+
 .nav-item {
-  padding: 0 12px;
+  padding: 0 18px;
+  display: flex;
+  align-items: center;
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -1936,6 +2070,9 @@ button:focus {
   font-weight: 700;
   text-transform: uppercase;
   font-family: "Ostrich Sans";
+  border: 1px solid transparent;
+  padding: 0px 10px;
+  border-radius: 5px;
 }
 
 @media (min-width: 0px) and (max-width: 767px) {
@@ -1951,6 +2088,31 @@ button:focus {
 
 .nav-link.fixed-color:hover {
   color: #000;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+
+.nav-link.fixed-color.active {
+  border: 1px solid #000;
+  padding: 0px 10px;
+  border-radius: 5px;
+}
+
+.nav-link.nav-link-bc {
+  color: #000;
+  transition: 0.3s ease-in-out;
+}
+
+.nav-link.nav-link-bc:hover {
+  color: #000;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+
+.nav-link.active {
+  border: 1px solid #fff;
+  padding: 0px 10px;
+  border-radius: 5px;
 }
 
 .nav-link:hover {
@@ -2408,6 +2570,18 @@ button:focus {
   }
 }
 
+.main-general__description.main-general__description--create {
+  margin-top: 40px;
+}
+
+.main-general__description.main-general__description--create p {
+  color: #686868;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 2.1px;
+  text-align: center;
+}
+
 .main-general__description.main-general__description--amb p {
   color: #686868;
   font-size: 25px;
@@ -2542,6 +2716,10 @@ button:focus {
   .main-about.main-about__height {
     height: auto;
   }
+}
+
+.main-about__mt {
+  margin-top: 85px;
 }
 
 .main-about__content {
@@ -2704,10 +2882,14 @@ button:focus {
   font-family: "Roboto", sans-serif;
   font-size: 15px;
   font-weight: 300;
+  transition: 0.3s ease-in-out;
 }
 
 .main-footer__box ul li a:hover {
   text-decoration: none;
+  font-size: 15px;
+  font-weight: 600;
+  transition: 0.3s ease-in-out;
 }
 
 .main-footer__btn {
@@ -2728,14 +2910,24 @@ button:focus {
 
 .main-footer__redes a {
   margin-right: 22px;
+  transition: 0.3s ease-in-out;
+}
+
+.main-footer__redes a:hover {
+  transform: translateY(-5px);
+  transition: 0.3s ease-in-out;
 }
 
 .main-footer__email {
   margin-top: 20px;
 }
 
-.main-footer__email p {
+.main-footer__email a {
   color: #000;
+}
+
+.main-footer__email a:hover {
+  text-decoration: none;
 }
 
 .main-footer__copy {
