--- a/app/index.haml
+++ b/app/index.haml
@@ -169,7 +169,8 @@
                   .main-footer__text
                     %p Part of Foodie Group S.A.S & Endeavor company
               .main-footer__address
-                %p Cl. 69a #No.6-37 - Bogotá, Colombia
+                %a{:href=>"#"}
+                  %p Cl. 69a #No.6-37 - Bogotá, Colombia
           .main-footer__item
             .main-footer__box
               .main-footer__title
