Add spaces in menu and btn poke dots

--- a/app/about.haml
+++ b/app/about.haml
@@ -22,7 +22,7 @@
           .navbar-collapse.offcanvas-collapse
             %ul.navbar-nav.mr-autos
               %li.nav-item.active
-                %a.nav-link{:href => "createpokebolw.html"} Menu
+                %a.nav-link{:href => "entries.html"} Menu
               %li.nav-item
                 %a.nav-link.active{:href => "about.html"} Nosotros
               %li.nav-item
@@ -40,7 +40,7 @@
                       %img{ :src => "assets/img/Home/R Rappi.svg"}/
                       %span.line
                       Pide en línea
-    .about-banner.about-banner--full{style:"background-image: url('assets/img/About/--46.png');"}
+    .about-banner{style:"background-image: url('assets/img/About/--46.png');"}
       .overlay
       .container
         .about-banner__text.about-banner__text--acenter
