--- a/app/poke-dots.haml
+++ b/app/poke-dots.haml
@@ -22,7 +22,7 @@
           .navbar-collapse.offcanvas-collapse
             %ul.navbar-nav.mr-autos
               %li.nav-item.active
-                %a.nav-link{:href => "createpokebolw.html"} Menu
+                %a.nav-link{:href => "entries.html"} Menu
               %li.nav-item
                 %a.nav-link{:href => "about.html"} Nosotros
               %li.nav-item
